<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_find_lawyers"
            android:icon="@drawable/ic_search"
            android:title="@string/nav_find_lawyers" />
        <item
            android:id="@+id/nav_appointments"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_appointments" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_location"
            android:title="@string/nav_map" />
    </group>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_client_profile"
                android:icon="@drawable/ic_profile"
                android:title="@string/nav_profile" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_profile"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:icon="@drawable/ic_verified"
                android:title="@string/nav_privacy_policy" />
        </menu>
    </item>

</menu>
